# missing-ag-updater

./: .gitignore  LICENSE  Makefile  README.md  agents.md  pyproject.toml  test_update.py  update.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
antigravity_tools_updater.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: generate_badge.py
src/missing_ag_updater/: __init__.py  cli.py  config.py  const.py  desktop.py  models.py  nautilus.py  updater.py  utils.py
src/tests/: test_cli.py  test_config.py  test_const.py  test_integrations.py  test_models.py  test_updater.py  test_utils.py
tests/: generate_badge.py  test_missing_ag_updater.py
